<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/drawerGroup"
        android:checkableBehavior="none">
        <item
            android:id="@+id/action_image"
            android:icon="@drawable/ic_baseline_image_24"
            android:title="@string/image" />
        <item
            android:id="@+id/action_message"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/messaging" />
        <item
            android:id="@+id/action_animation"
            android:icon="@drawable/ic_baseline_animation_24"
            android:title="@string/animation" />
        <item
            android:id="@+id/action_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/logout" />
    </group>

</menu>